# cadpya

./: .gitignore  CLAUDE.md  Pipfile  README.md  dev-guide.md  log-format.md  phase1-plan.md  phase2-plan.md  phase3-plan.md  phase4-plan.md  phase5-plan.md  phase6-plan.md  plans.md  pyproject.toml  reference.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  scorecard.yml
examples/: example_4gp.py  example_counter.py  example_job_tracker.py  log_utils.py
scripts/: check-all.sh  fmt.sh  lint.sh  test.sh  typecheck.sh
src/cadpya/: __init__.py
src/cadpya/basic_models/: accumulator.py  counter.py  generator.py  processor.py
src/cadpya/engine/: coordinator.py  protocol.py  root_coordinator.py  simulator.py
src/cadpya/modeling/: component.py  coupled.py  decimal.py  diagram.py  interval.py
tests/: test_smoke.py
tests/basic_models/: test_accumulator.py  test_counter.py  test_generator.py  test_processor.py
tests/coupled_models/: test_4gp.py  test_eic.py  test_gp.py  test_hierarchical.py
tests/engine/: test_coordinator.py  test_protocol.py  test_root_coordinator.py  test_simulator.py
tests/modeling/: test_component.py  test_coupled.py  test_decimal.py  test_diagram.py  test_interval.py
tests/validation/: test_4gp_branching.py  test_4gp_tables.py  test_hierarchical_equivalence.py  test_log_structure.py
