[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "cadpya"
version = "0.1.0"
description = "Python implementation of the IA-DEVS simulator"
license = {text = "BSD-2-Clause"}
requires-python = ">=3.13"
authors = [
    {name = "Damian Vicino", email = "sdavtaker@users.noreply.github.com"},
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "ruff>=0.9",
    "mypy>=1.14",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 99

[tool.ruff.lint]
select = [
    "E", "W",       # pycodestyle
    "F",             # pyflakes
    "I",             # isort
    "N",             # pep8-naming
    "UP",            # pyupgrade
    "B",             # flake8-bugbear
    "SIM",           # flake8-simplify
    "TCH",           # flake8-type-checking
    "RUF",           # ruff-specific
    "PT",            # flake8-pytest-style
    "C4",            # flake8-comprehensions
    "PIE",           # flake8-pie
    "RET",           # flake8-return
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short --cov=cadpya --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["src/cadpya"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
]
